Finished Banner in index.html
Updated Banner with relevant information about me and changed the title of the webpage.

Additionally, made a new copy of the original template and saved it in the directory Original Template.

--- a/Original Template/index.html
+++ b/Original Template/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Umang Sharma - Landing Page
-	based off of Template @ html5up.net | @ajlkn
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Umang Sharma - Landing Page</title>
+		<title>Editorial by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Umang Sharma</strong> - Landing Page</a>
+									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -35,14 +36,11 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Umang Sharma<br /></h1>
-											<p>Sophomore <br /> Computer Science <br /> Purdue University <br /> West Lafayette.</p>
+											<h1>Hi, I’m Editorial<br />
+											by HTML5 UP</h1>
+											<p>A free and fully responsive site template</p>
 										</header>
-										<p> I've grown up on a healthy diet of fruits, vegetables and video games since I was a young child. 
-											My strong interest in video games piqued my curiosity in programming and before I knew it, I was taking CS classes on the weekends to learn new technologies at the ripe age of 10. 
-											I'm currently working with Java, Unity, C# and Git. <br />
-											I'm currently seeking an internship for the summer of 2021. 
-											</p>
+										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
