Formatted Text in Banner in index.html
<Title>

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I’m Umang Sharma<br /></h1>
-											<p>Sophomore <br /> Computer Science <br /> Purdue University <br /> West Lafayette.</p>
+											<p>Sophomore <br /> Computer Science <br /> Purdue University <br /> West Lafayette</p>
 										</header>
 										<p> I've grown up on a healthy diet of fruits, vegetables and video games since I was a young child. 
-											My strong interest in video games piqued my curiosity in programming and before I knew it, I was taking CS classes on the weekends to learn new technologies at the ripe age of 10. 
-											I'm currently working with Java, Unity, C# and Git. <br />
-											I'm currently seeking an internship for the summer of 2021. 
+											My strong interest in video games piqued my curiosity in programming and before I knew it, I was 
+											taking CS classes on the weekends to learn new technologies at the ripe old age of 10. 
+											Currently working with Java, Unity, C# and Git. <br />
+											Seeking an internship for the summer of 2021. 
 											</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
