Updated Index.html 1.0
Updated the Landing page of the website. Swapped two sections. Added Project_01 - UmangSharma24.github.io: this project.
Added Project_01.png to the images sub directory.

--- a/index.html
+++ b/index.html
@@ -53,53 +53,22 @@
 									</span>
 								</section>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Erat lacinia</h2>
-									</header>
-									<div class="features">
-										<article>
-											<span class="icon fa-gem"></span>
-											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-									</div>
-								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="images/Project_01.png" alt="" /></a>
+											<h3>UmangSharma24.github.io</h3>
+											<p>This project focuses on building a professional website for myself.
+												I wanted a platform to list all my projects to make it accessible for future employers.
+												Through the development process, I learnt how to build websites, connect 
+												webpages and polish my proficiency with the languages used.
+												It's is built using HTML, CSS and JavaScript.
+												I incorporated new features and changed the design of a template website found at html5up.net/editorial.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
@@ -147,6 +116,42 @@
 									</div>
 								</section>
 
+							<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Erat lacinia</h2>
+										</header>
+										<div class="features">
+											<article>
+												<span class="icon fa-gem"></span>
+													<div class="content">
+														<h3>Portitor ullamcorper</h3>
+														<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+														</div>
+											</article>
+											<article>
+												<span class="icon solid fa-paper-plane"></span>
+													<div class="content">
+														<h3>Sapien veroeros</h3>
+														<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+														</div>
+											</article>
+											<article>
+												<span class="icon solid fa-rocket"></span>
+													<div class="content">
+														<h3>Quam lorem ipsum</h3>
+														<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+														</div>
+											</article>
+											<article>
+												<span class="icon solid fa-signal"></span>
+													<div class="content">
+														<h3>Sed magna finibus</h3>
+														<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+														</div>
+											</article>
+										</div>
+								</section>
 						</div>
 					</div>
 
