Updated index.html 1.1
Fixed grammatical error.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 												I wanted a platform to list all my projects to make it accessible for future employers.
 												Through the development process, I learnt how to build websites, connect 
 												webpages and polish my proficiency with the languages used.
-												It's is built using HTML, CSS and JavaScript.
-												I incorporated new features and changed the design of a template website found at html5up.net/editorial.</p>
+												It's built using HTML, CSS and JavaScript.
+												I incorporated new features and changed the design of a template website found at the URL: <br /> html5up.net/editorial</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
