--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 												Through the development process, I learnt how to build websites, connect 
 												webpages and polish my proficiency with the languages used.
 												It's built using HTML, CSS and JavaScript.
-												I incorporated new features and changed the design of a template website found at the URL: <br /> html5up.net/editorial</p>
+												I incorporated new features and changed the design of a template webpages
+												found at the URL: <br /> html5up.net/editorial</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
