--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 											My strong interest in video games piqued my curiosity in programming and before I knew it, I was 
 											taking CS classes on the weekends to learn new technologies at the ripe old age of 10. 
 											Currently working with Java, Unity, C# and Git. <br />
-											Seeking an internship for the summer of 2021. 
+											I am seeking an internship for the summer of 2021. 
 											</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
@@ -68,7 +68,7 @@
 												Through the development process, I learnt how to build websites, connect 
 												webpages and polish my proficiency with the languages used.
 												It's built using HTML, CSS and JavaScript.
-												I incorporated new features and changed the design of a template webpages
+												I incorporated new features and changed the design of template webpages
 												found at the URL: <br /> html5up.net/editorial</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
