--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--
 	Umang Sharma - Landing Page
 	based off of Template @ html5up.net | @ajlkn
+	Accent Color: #e7174b
 -->
 <html>
 	<head>
@@ -54,14 +55,15 @@
 								</section>
 
 
-							<!-- Section -->
+							<!-- Projects Section -->
 								<section>
 									<header class="major">
 										<h2>Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/Project_01.png" alt="" /></a>
+											<!-- Website Project -->
+											<a href="#" class="image"><img src="images/Project_Website.png" alt="" /></a>
 											<h3>UmangSharma24.github.io</h3>
 											<p>This project focuses on building a professional website for myself.
 												I wanted a platform to list all my projects to make it accessible for future employers.
@@ -75,17 +77,36 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<!-- VirtuCards Project-->
+											<a href="#" class="image"><img src="images/Project_VirtuCards.png" alt="" /></a>
+											<h3>VirtuCards - Unity Game for Desktop and Mobile platforms</h3>
+											<p>VirtuCards is a series of game applications designed to meet the needs of card game
+												aficionado with the safety precautions of the current global pandemic in mind.
+												The game allows users to connect to play card games in a way that follows social 
+												distancing guidelines. My role involved working on establishing connection with 
+												Photon servers; creating game rooms; desiging UI for the cards; implementing the game
+												logic for shuffling cards and implementing exit functionality. I worked with Unity,
+												C#, Google Firebase and the Photon Library during this project.
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<!-- Boilership 150 Project -->
+											<br />
+											<a href="#" class="image"><img src="images/Project_Boilership.png" alt="" /></a>
+											<h3>Boilership 150 - Unity Game</h3>
+											<p>Boilership is a Unity game built at the Hello World hackathon in 2019.
+												The game is a platformer based on the Boilermaker culture - incorporating 
+												fun references and inside jokes from campus life.
+												My role in this project was to create assets for the enemies in the game and the power-ups.
+												I was responsible for implementing the back-end functionality for the power-ups as well.
+												This was one of my first projects and taught me a lot about desiging projects 
+												and the process around conceiving software.
+												I was able to learn the basics of Unity and C# through my contribution to 
+												this project.
+											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
