--- a/index.html
+++ b/index.html
@@ -112,24 +112,9 @@
 											</ul>
 										</article>
 										<article>
+											<!---->
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
@@ -138,38 +123,53 @@
 									</div>
 								</section>
 
-							<!-- Section -->
+							<!-- Skills Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>Skills</h2>
+										<!-- TODO Swap Icons out for more appropriate ones -->
 										</header>
 										<div class="features">
 											<article>
 												<span class="icon fa-gem"></span>
 													<div class="content">
-														<h3>Portitor ullamcorper</h3>
-														<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+														<h3>Technical Skills</h3>
+														<p>I've worked with Java, C#, C, Unity, Python, HTML and JavaScript.
+															I'm open to learning any new languages as well.
+														</p>
 														</div>
 											</article>
 											<article>
 												<span class="icon solid fa-paper-plane"></span>
 													<div class="content">
-														<h3>Sapien veroeros</h3>
-														<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-														</div>
+														<h3>Important Coursework</h3>
+														<ul>
+															<li>CS 307: Software Engineering I</li>
+															<li>CS 252: Systems Programming</li>
+															<li>CS 251: Data Structures & Algorithms</li>
+															<li> More...</li>
+														</ul>
+													</div>
 											</article>
 											<article>
 												<span class="icon solid fa-rocket"></span>
 													<div class="content">
-														<h3>Quam lorem ipsum</h3>
-														<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+														<h3>Tools & Technologies</h3>
+														<p>I've worked with Git, Google Firebase and remote SSH.
+															I'm open to learning and working with new tools and technologies in the future.
+														</p>
 														</div>
 											</article>
 											<article>
 												<span class="icon solid fa-signal"></span>
 													<div class="content">
-														<h3>Sed magna finibus</h3>
-														<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+														<h3>Soft Skills</h3>
+														<ul>
+															<li> Adaptable </li>
+															<li> Problem-Solver </li>
+															<li> Creative </li>
+															<li> Determined</li>
+														</ul>
 														</div>
 											</article>
 										</div>
@@ -182,11 +182,11 @@
 						<div class="inner">
 
 							<!-- Search -->
-								<section id="search" class="alt">
+								<!-- <section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
-								</section>
+								</section> -->
 
 							<!-- Menu -->
 								<nav id="menu">
