--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/Banner_01.jpg" alt="" />
 									</span>
 								</section>
 
