--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 												fun references and inside jokes from campus life.
 												My role in this project was to create assets for the enemies in the game and the power-ups.
 												I was responsible for implementing the back-end functionality for the power-ups as well.
-												This was one of my first projects and taught me a lot about desiging projects 
-												and the process around conceiving software.
+												This was one of my first projects and taught me a lot about the process of conceiving and
+												designing software.
 												I was able to learn the basics of Unity and C# through my contribution to 
 												this project.
 											</p>
@@ -111,15 +111,18 @@
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
-											<!---->
+
+										<!-- TEMPLATE CODE TO ADD PROJECT -->
+
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Sed etiam facilis</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
-										</article>
+										</article> -->
+
 									</div>
 								</section>
 
@@ -134,10 +137,14 @@
 												<span class="icon fa-gem"></span>
 													<div class="content">
 														<h3>Technical Skills</h3>
-														<p>I've worked with Java, C#, C, Unity, Python, HTML and JavaScript.
-															I'm open to learning any new languages as well.
-														</p>
-														</div>
+														<ul>
+															<li> Java </li>
+															<li> C# </li>
+															<li> HTML </li>
+															<li> Unity </li> 
+															<li> C </li> 
+														</ul>
+													</div>
 											</article>
 											<article>
 												<span class="icon solid fa-paper-plane"></span>
@@ -155,10 +162,12 @@
 												<span class="icon solid fa-rocket"></span>
 													<div class="content">
 														<h3>Tools & Technologies</h3>
-														<p>I've worked with Git, Google Firebase and remote SSH.
-															I'm open to learning and working with new tools and technologies in the future.
-														</p>
-														</div>
+														<ul>
+															<li> Git </li>
+															<li> Google Firebase </li>
+															<li> GDB </li> 
+														</ul>
+													</div>
 											</article>
 											<article>
 												<span class="icon solid fa-signal"></span>
@@ -226,25 +235,31 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
+										<h2>Recent Work</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="images/Project_Website.png" alt="" /></a>
+											<p> Updated the snapshot for the website. 
+												Added contact details and reformatted Skills section. <br />
+												Plan to implement a section or webpage for Design Portfolio and detailed personal information. </p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="images/Recent_Update_3-25-21.png" alt="" /></a>
+											<p>Merged Shuffle Logic branch into master branch. Added UI files for all cards and card decks.</p>
 										</article>
-										<article>
+
+										<!-- TEMPLATE CODE TO ADD RECENT UPDATES -->
+
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
+										</article> -->
+
 									</div>
-									<ul class="actions">
+									<!-- <ul class="actions">
 										<li><a href="#" class="button">More</a></li>
-									</ul>
+									</ul> -->
 								</section>
 
 							<!-- Section -->
@@ -252,18 +267,20 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>You can reach out to me using the contact details mentioned below.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">sharm390@purdue.edu</a></li>
+										<li class="icon solid fa-phone">(765) 775-3997</li>
+										<!-- <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
+										Nashville, TN 00000-0000</li> -->
 									</ul>
 								</section>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; UmangSharma24. All rights reserved. <br /> 
+										Last Updated: <i>March 2021</i> <br />
+										Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
