--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://github.com/UmangSharma24" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://www.linkedin.com/in/sharma-umang/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</header>
 
@@ -49,7 +48,7 @@
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image object">
+									<span class="image">
 										<img src="images/Banner_01.jpg" alt="" />
 									</span>
 								</section>
@@ -79,11 +78,12 @@
 										<article>
 											<!-- VirtuCards Project-->
 											<a href="#" class="image"><img src="images/Project_VirtuCards.png" alt="" /></a>
-											<h3>VirtuCards - Unity Game for Desktop and Mobile platforms</h3>
+											<h3>VirtuCards - Unity Game for Desktop and Mobile</h3>
 											<p>VirtuCards is a series of game applications designed to meet the needs of card game
 												aficionado with the safety precautions of the current global pandemic in mind.
-												The game allows users to connect to play card games in a way that follows social 
-												distancing guidelines. My role involved working on establishing connection with 
+												<!-- The game allows users to connect to play card games in a way that follows social 
+												distancing guidelines. --> 
+												My role involved working on establishing connection with 
 												Photon servers; creating game rooms; desiging UI for the cards; implementing the game
 												logic for shuffling cards and implementing exit functionality. I worked with Unity,
 												C#, Google Firebase and the Photon Library during this project.
@@ -102,10 +102,10 @@
 												fun references and inside jokes from campus life.
 												My role in this project was to create assets for the enemies in the game and the power-ups.
 												I was responsible for implementing the back-end functionality for the power-ups as well.
-												This was one of my first projects and taught me a lot about the process of conceiving and
+												<!-- This was one of my first projects and taught me a lot about the process of conceiving and
 												designing software.
 												I was able to learn the basics of Unity and C# through my contribution to 
-												this project.
+												this project. -->
 											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
@@ -134,7 +134,7 @@
 										</header>
 										<div class="features">
 											<article>
-												<span class="icon fa-gem"></span>
+												<span class="icon solid fas fa-code"></span>
 													<div class="content">
 														<h3>Technical Skills</h3>
 														<ul>
@@ -147,7 +147,7 @@
 													</div>
 											</article>
 											<article>
-												<span class="icon solid fa-paper-plane"></span>
+												<span class="icon solid fas fa-book"></span>
 													<div class="content">
 														<h3>Important Coursework</h3>
 														<ul>
@@ -159,7 +159,7 @@
 													</div>
 											</article>
 											<article>
-												<span class="icon solid fa-rocket"></span>
+												<span class="icon solid fas fa-tools"></span>
 													<div class="content">
 														<h3>Tools & Technologies</h3>
 														<ul>
@@ -170,7 +170,7 @@
 													</div>
 											</article>
 											<article>
-												<span class="icon solid fa-signal"></span>
+												<span class="icon solid fas fa-comments"></span>
 													<div class="content">
 														<h3>Soft Skills</h3>
 														<ul>
@@ -270,7 +270,7 @@
 									<p>You can reach out to me using the contact details mentioned below.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">sharm390@purdue.edu</a></li>
-										<li class="icon solid fa-phone">(765) 775-3997</li>
+										<li class="icon solid fa-phone">+1-765-775-3997</li>
 										<!-- <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li> -->
 									</ul>
