--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 															<li>CS 307: Software Engineering I</li>
 															<li>CS 252: Systems Programming</li>
 															<li>CS 251: Data Structures & Algorithms</li>
-															<li> More...</li>
+															<li><a href="coursework.html"> More... </a></li>
 														</ul>
 													</div>
 											</article>
