--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<article>
 											<!-- Boilership 150 Project -->
 											<br />
-											<a href="#" class="image"><img src="images/Project_Boilership.png" alt="" /></a>
+											<a href="boilership150.html" class="image"><img src="images/Project_Boilership.png" alt="" /></a>
 											<h3>Boilership 150 - Unity Game</h3>
 											<p>Boilership is a Unity game built at the Hello World hackathon in 2019.
 												The game is a platformer based on the Boilermaker culture - incorporating 
@@ -208,12 +208,9 @@
 										<!-- <li><a href="generic.html">Generic</a></li> -->
 										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Projects</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="boilership150.html"><b>Boilership 150</b></a></li>
 											</ul>
 										</li>
 										<li><a href="#">Etiam Dolore</a></li>
@@ -270,7 +267,7 @@
 									</header>
 									<p>You can reach out to me using the contact details mentioned below.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">sharm390@purdue.edu</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:sharm390@purdue.edu">sharm390@purdue.edu</a></li>
 										<li class="icon solid fa-phone">+1-765-775-3997</li>
 										<!-- <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li> -->
@@ -280,7 +277,7 @@
 							<!-- Footer -->
 								<footer id="footer">
 									<p class="copyright">&copy; UmangSharma24. All rights reserved. <br /> 
-										Last Updated: <i>March 2021</i> <br />
+										Last Updated: <i>April 2021</i> <br />
 										Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
