--- a/coursework.html
+++ b/coursework.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Coursework Page - Umang Sharma
-	Template: 
+	TEMPLATE: 
 	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
@@ -158,7 +158,7 @@
 								</header>
 								<p>You can reach out to me using the contact details mentioned below.</p>
 								<ul class="contact">
-									<li class="icon solid fa-envelope"><a href="#">sharm390@purdue.edu</a></li>
+									<li class="icon solid fa-envelope"><a href="mailto:sharm390@purdue.edu">sharm390@purdue.edu</a></li>
 									<li class="icon solid fa-phone">+1-765-775-3997</li>
 									<!-- <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 									Nashville, TN 00000-0000</li> -->
@@ -168,7 +168,7 @@
 						<!-- Footer -->
 							<footer id="footer">
 								<p class="copyright">&copy; UmangSharma24. All rights reserved. <br /> 
-									Last Updated: <i>March 2021</i> <br />
+									Last Updated: <i>April 2021</i> <br />
 									Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 							</footer>
 
