Updated picture on index page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 										</ul>
 									</div>
 									<span class="image">
-										<img src="images/Banner_01.jpg" alt="" />
+										<!-- Banner_02 is used instead of Banner_01 as the image was a placeholder till this picture was taken-->
+										<img src="images/Banner_02.jpg" alt="" />
 									</span>
 								</section>
 
@@ -95,7 +96,7 @@
 										<article>
 											<!-- Boilership 150 Project -->
 											<br />
-											<a href="boilership150.html" class="image"><img src="images/Project_Boilership.png" alt="" /></a>
+											<a href="boilership150.html" class="image"><img src="images/Boilership 150/Project_Boilership.png" alt="" /></a>
 											<h3>Boilership 150 - Unity Game</h3>
 											<p>Boilership is a Unity game built at the Hello World hackathon in 2019.
 												The game is a platformer based on the Boilermaker culture - incorporating 
