Fixed Project Boilership 150 image

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 										<article>
 											<!-- Boilership 150 Project -->
 											<br />
-											<a href="boilership150.html" class="image"><img src="images/Boilership 150/Project_Boilership.png" alt="" /></a>
+											<a href="boilership150.html" class="image"><img src="images/Boilership 150/Project_Boilership01.png" alt="Screenshot of the menu from Boilership 150" /></a>
 											<h3>Boilership 150 - Unity Game</h3>
 											<p>Boilership is a Unity game built at the Hello World hackathon in 2019.
 												The game is a platformer based on the Boilermaker culture - incorporating 
