--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 												this project. -->
 											</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="boilership150.html" class="button">More</a></li>
 											</ul>
 										</article>
 
@@ -266,7 +266,7 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>You can reach out to me using the contact details mentioned below.</p>
+									<p>Contact Information:</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto:sharm390@purdue.edu">sharm390@purdue.edu</a></li>
 										<li class="icon solid fa-phone">+1-765-775-3997</li>
