--- a/boilership150.html
+++ b/boilership150.html
@@ -141,9 +141,9 @@
 								</header>
 								<ul>
 									<li><a href="index.html">Homepage</a></li>
+									<li><a href="resume.html">Resume</a></li>
 									<li><a href="coursework.html">Coursework</a></li>
 									<!-- <li><a href="generic.html">Generic</a></li> -->
-									<li><a href="elements.html">Elements</a></li>
 									<li>
 										<span class="opener">Projects</span>
 										<ul>
