--- a/coursework.html
+++ b/coursework.html
@@ -122,15 +122,12 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
+										<li><a href="resume.html">Resume</a></li>
 										<li><a href="coursework.html">Coursework</a></li>
-										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Projects</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="boilership150.html"><b>Boilership 150</b></a></li>
 											</ul>
 										</li>
 										<li><a href="#">Etiam Dolore</a></li>
