Made multiple grammar fixes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 												aficionado with the safety precautions of the current global pandemic in mind.
 												<!-- The game allows users to connect to play card games in a way that follows social 
 												distancing guidelines. --> 
-												My role involved working on establishing connection with 
+												I worked on establishing connection with the 
 												Photon servers; creating game rooms; desiging UI for the cards; implementing the game
 												logic for shuffling cards and implementing exit functionality. I worked with Unity,
 												C#, Google Firebase and the Photon Library during this project.
@@ -264,9 +264,9 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2>Contact Information</h2>
 									</header>
-									<p>Contact Information:</p>
+									<!-- <p>Contact Information:</p> -->
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto:sharm390@purdue.edu">sharm390@purdue.edu</a></li>
 										<li class="icon solid fa-phone">+1-765-775-3997</li>
