--- a/resume.html
+++ b/resume.html
@@ -39,8 +39,7 @@
 										<h2>Resume</h2>
 									</header>
 
-									<p>My resume is displayed below. 
-										To download my resume, click <a href = "assets/Resume US.pdf">here</a>.</p>									
+									<p>To download my resume, click <a href = "assets/Resume US.pdf">here</a>.</p>									
 									
 									<iframe src="assets/Resume US.pdf#toolbar=0" width=1000 height="1080"></iframe>
 									
