--- a/boilership150.html
+++ b/boilership150.html
@@ -70,10 +70,10 @@
 										algorithm for the enemy characters to identify the player character.
 									</p>
 									<p>
-										The power-up feature was implemented by attached a Tag field to the GameObject and assigning it a unique value.
+										The power-up feature was implemented by attaching a Tag field to the GameObject and assigning it a unique value.
 										Upon contact with the power-up GameObject, the player character's Tag field is reassigned to the same value as
 										that of the power-up. 
-										In the Update method of Unity (which is called once every frame), I then added an if statement that determines
+										In the Update method of Unity (which is called once every frame), I then added an if-statement that determines
 										if the player character's Tag field matches that of the Power-up's. If the two are equal, the player character's
 										speed value is doubled. After a short while, the tag value and the speed value of the player character are
 										restored.				
@@ -111,9 +111,9 @@
 									<h2>Retrospective</h2>
 									<p>
 										Overall, I really enjoyed working on this project and I greatly value all that it taught me.
+										My team and I earned the Runner-Up position for our project and were quite proud of it.
 										I am still friends with the members of my team and I used the skills I learnt with Unity in
-										future projects. It was extremely reassuring to accomplish the position that we did on our first
-										try.
+										future projects.
 									</p>
 					
 									
