Added Website Project page
Added Website Project page.
Added Website Project subdirectory in the images directory.
Added Website_Project01.png
Added links to the page in the Projects tab in the sidebar Menu.

--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
 									<div class="posts">
 										<article>
 											<!-- Website Project -->
+											<!-- CHANGE TENSE WHEN COMPLETE -->
 											<a href="#" class="image"><img src="images/Project_Website.png" alt="" /></a>
-											<h3>UmangSharma24.github.io</h3>
+											<h3>UmangSharma24.github.io - In Progress</h3>
 											<p>This project focuses on building a professional website for myself.
 												I wanted a platform to list all my projects to make it accessible for future employers.
-												Through the development process, I learnt how to build websites, connect 
+												Through the development process, I'm learning how to build websites, connect 
 												webpages and polish my proficiency with the languages used.
 												It's built using HTML, CSS and JavaScript.
-												I incorporated new features and changed the design of template webpages
+												I'm incorporating new features and changing the design of template webpages
 												found at the URL: <br /> html5up.net/editorial</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
@@ -212,6 +213,7 @@
 											<span class="opener">Projects</span>
 											<ul>
 												<li><a href="boilership150.html"><b>Boilership 150</b></a></li>
+												<li><a href="project_website.html"><b>Website Project</b></a></li>
 											</ul>
 										</li>
 										<li><a href="#">Etiam Dolore</a></li>
