--- a/boilership150.html
+++ b/boilership150.html
@@ -60,7 +60,7 @@
 
 									<hr class="major" />
 
-									<h2>Repository: <a href="https://github.com/leeethan1/BoilerShip"> <u>Here</u></a></h2>
+									<h2>Repository: <a href="https://github.com/leeethan1/BoilerShip"> <u>Click Here</u></a></h2>
 
 									<hr class="major" />
 
@@ -148,6 +148,7 @@
 										<span class="opener">Projects</span>
 										<ul>
 											<li><a href="boilership150.html"><b>Boilership 150</b></a></li>
+											<li><a href="project_website.html"><b>Website Project</b></a></li>
 										</ul>
 									</li>
 									<li><a href="#">Etiam Dolore</a></li>
