Made small changes to nomenclature of WebDevProject

--- a/boilership150.html
+++ b/boilership150.html
@@ -148,7 +148,7 @@
 										<span class="opener">Projects</span>
 										<ul>
 											<li><a href="boilership150.html"><b>Boilership 150</b></a></li>
-											<li><a href="project_website.html"><b>Website Project</b></a></li>
+											<li><a href="project_website.html"><b>UmangSharma24.github.io</b></a></li>
 										</ul>
 									</li>
 									<li><a href="#">Etiam Dolore</a></li>
