--- a/project_website.html
+++ b/project_website.html
@@ -24,7 +24,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="project_website.html" class="logo"><strong>Umang Sharma</strong> - Projects - Website Project</a>
+									<a href="project_website.html" class="logo"><strong>Umang Sharma</strong> - Projects - UmangSharma24.github.io</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -36,8 +36,8 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Website Project</h1>
-										<h2>In Progress</h2>
+										<h1>UmangSharma24.github.io</h1>
+										<h2><i>In Progress</i></h2>
 									</header>
 
 									<span class="image main"><img src="images/Website Project/Website_Project01.png" alt="A screenshot of the landing page of the website" /></span>
@@ -53,8 +53,8 @@
 
 									<hr class="major" />
 
-									<h2>Interdum sed dapibus</h2>
-									
+									<h2>Sitemap</h2>
+									<p>TBD</p>
 
 									<hr class="major" />
 
@@ -96,7 +96,7 @@
 											<span class="opener">Projects</span>
 											<ul>
 												<li><a href="boilership150.html"><b>Boilership 150</b></a></li>
-												<li><a href="project_website.html"><b>Website Project</b></a></li>
+												<li><a href="project_website.html"><b>UmangSharma24.github.io</b></a></li>
 											</ul>
 										</li>
 										<li><a href="#">Etiam Dolore</a></li>
