--- a/index.html
+++ b/index.html
@@ -241,14 +241,17 @@
 									<div class="mini-posts">
 										<article>
 											<a href="#" class="image"><img src="images/Project_Website.png" alt="" /></a>
-											<p> Updated the snapshot for the website. 
-												Added contact details and reformatted Skills section. <br />
-												Plan to implement a section or webpage for Design Portfolio and detailed personal information. </p>
+											<p> Working on Website Project webpage.
+												<br />
+											 </p>
 										</article>
+
+										<!--
 										<article>
 											<a href="#" class="image"><img src="images/Recent_Update_3-25-21.png" alt="" /></a>
 											<p>Merged Shuffle Logic branch into master branch. Added UI files for all cards and card decks.</p>
-										</article>
+										</article> 
+										-->
 
 										<!-- TEMPLATE CODE TO ADD RECENT UPDATES -->
 
