--- a/generic.html
+++ b/generic.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <!--
+	Generic Page - Umang Sharma
+	TEMPLATE:
 	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
