Minor grammar fix

--- a/contact_me.html
+++ b/contact_me.html
@@ -58,8 +58,9 @@
 										My Social Media:
 									
 										<br />
+										
 										My Github profile: <a href="https://github.com/UmangSharma24">https://github.com/UmangSharma24</a>
-										<br /> My LinkedIn: <a href="https://www.linkedin.com/in/sharma-umang/">https://www.linkedin.com/in/sharma-umang/</a>
+										<br /> My LinkedIn profile: <a href="https://www.linkedin.com/in/sharma-umang/">https://www.linkedin.com/in/sharma-umang/</a>
 
 									</p>
 
