--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Umang Sharma</strong> - Landing Page</a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<ul class="icons">														
 										<li><a href="https://github.com/UmangSharma24" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<li><a href="https://www.linkedin.com/in/sharma-umang/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:umangsharma0524@gmail.com" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</header>
 
@@ -227,7 +227,7 @@
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
+										<li><a href="contact_me.html">Contact Me</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="#">Amet Lacinia</a></li>
 									</ul>
