--- a/project_website.html
+++ b/project_website.html
@@ -26,10 +26,10 @@
 								<header id="header">
 									<a href="project_website.html" class="logo"><strong>Umang Sharma</strong> - Projects - UmangSharma24.github.io</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://github.com/UmangSharma24" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<li><a href="https://www.linkedin.com/in/sharma-umang/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:umangsharma0524@gmail.com" class="icon solid fa-envelope"><span class="label">E-mail</span></a></li>
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</header>
 
@@ -42,7 +42,8 @@
 
 									<span class="image main"><img src="images/Website Project/Website_Project01.png" alt="A screenshot of the landing page of the website" /></span>
 
-									<p>This project focuses on building a professional website for myself.
+									<p>
+										This project focuses on building a professional website for myself.
 										I wanted a platform to list all my projects to make it accessible for future employers.
 										Through the development process, I'm learning how to build websites, connect 
 										webpages and polish my proficiency with the languages used.
@@ -58,7 +59,6 @@
 										I've acquired over the years, the classes I've taken and anything else I deem relevant
 										to put up. The landing page has all the important relevant information for recruiters
 										in brief and there are pages dedicated to elaborate on each topic. 
-						
 									</p>
 
 									<hr class="major" />
@@ -116,7 +116,7 @@
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
+										<li><a href="contact_me.html">Contact Me</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="#">Amet Lacinia</a></li>
 									</ul>
