--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 										<article>
 											<!-- Website Project -->
 											<!-- CHANGE TENSE WHEN COMPLETE -->
-											<a href="#" class="image"><img src="images/Project_Website.png" alt="" /></a>
-											<h3>UmangSharma24.github.io - In Progress</h3>
+											<a href="project_website.html" class="image"><img src="images/Project_Website.png" alt="A snapshot of the website project code" /></a>
+											<h3>UmangSharma24.github.io - <i>In Progress</i></h3>
 											<p>This project focuses on building a professional website for myself.
 												I wanted a platform to list all my projects to make it accessible for future employers.
 												Through the development process, I'm learning how to build websites, connect 
@@ -275,8 +275,8 @@
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto:sharm390@purdue.edu">sharm390@purdue.edu</a></li>
 										<li class="icon solid fa-phone">+1-765-775-3997</li>
-										<!-- <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li> -->
+										<li class="icon solid fa-home">Purdue University<br />
+										Indiana, 47906, USA</li>
 									</ul>
 								</section>
 
