--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 										</article>
 										<article>
 											<!-- VirtuCards Project-->
-											<a href="#" class="image"><img src="images/Project_VirtuCards.png" alt="" /></a>
+											<a href="project_virtucards.html" class="image"><img src="images/Project_VirtuCards.png" alt="" /></a>
 											<h3>VirtuCards - Unity Game for Desktop and Mobile</h3>
 											<p>VirtuCards is a series of game applications designed to meet the needs of card game
 												aficionado with the safety precautions of the current global pandemic in mind.
 												<!-- The game allows users to connect to play card games in a way that follows social 
 												distancing guidelines. --> 
 												I worked on establishing connection with the 
-												Photon servers; creating game rooms; desiging UI for the cards; implementing the game
+												Photon servers; creating game rooms; designing UI for the cards; implementing the game
 												logic for shuffling cards and implementing exit functionality. I worked with Unity,
 												C#, Google Firebase and the Photon Library during this project.
 											</p>
