--- a/project_website.html
+++ b/project_website.html
@@ -148,6 +148,7 @@
 											<ul>
 												<li><a href="boilership150.html"><b>Boilership 150</b></a></li>
 												<li><a href="project_website.html"><b>UmangSharma24.github.io</b></a></li>
+												<li><a href="project_virtucards.html"><b>VirtuCards</b></a></li>
 											</ul>
 										</li>
 										<li><a href="#">Etiam Dolore</a></li>
